--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -24,11 +24,11 @@
 /* @import must be at top of file, otherwise CSS will not work */
 /* @import url("//hello.myfonts.net/count/3ce5b2"); */
 
-@font-face {
+/*@font-face {
   font-family: 'Olio-Bold';
   src: url('./fonts/Olio-Bold/font.woff2') format('woff2'), url('./fonts/Olio-Bold/font.woff') format('woff');
 }
 @font-face {
   font-family: 'OlioInline';
   src: url('./fonts/OlioInline/font.woff2') format('woff2'), url('./fonts/OlioInline/font.woff') format('woff');
-}
+}*/
