Create collection page + add react-miller library

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,8 @@
-$primary: #E7B12D;
+$primary: black;
 $secondary: #878787;
 $dark: black;
 $light: #FFF;
-$link-hover-color: #b98e24;
+$link-hover-color: rgba(0, 0, 0, 0.7);
 $link-hover-dark: #525051;
 $body-color: black;
 
