--- a/src/styles/pages/Collection.scss
+++ b/src/styles/pages/Collection.scss
@@ -1,16 +1,17 @@
 .Collection {
 
   background-color: var(--bs-gray-300);
-  min-height: 100%;
+  height: 100%;
+  overflow-y: scroll;
 
   .position-sticky {
     z-index: 1;
-    top: 65px;
+    top: 0;
     position: sticky;
     background-color: var(--bs-gray-300);
     margin-left: 0;
     padding: 1rem 0;
-    margin: -1rem 0 -0.5rem 0;
+//    margin: -1rem 0 -0.5rem 0;
   }
 
   .media-type-facet .nav-link {
