--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,3 +38,13 @@ h1{
   font-size: 4.5rem;
   font-weight: normal;
 }
+
+h2 {
+  font-size: 2rem;
+  margin: 3rem 0;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin: 2rem 0;
+}
