--- a/src/styles/pages/Story.scss
+++ b/src/styles/pages/Story.scss
@@ -2,13 +2,17 @@
 
   font-size: 1.5rem;
   line-height: 1.4;
+  height: 100%;
+  padding-top: 3rem;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 
   .bg-image {
     content: "";
     position: absolute;
     background-size: cover;
     background-position: center;
-    opacity: 0.10;
+    opacity: 0.05;
     top: 0px;
     right: 0px;
     bottom: 0px;
@@ -16,11 +20,20 @@
     z-index: -1;
   }
 
+  .intro {
+    height: calc(100% - 93px);
+    overflow: hidden;
+  }
+
   .story-menu {
     flex-wrap: nowrap;
-    width: 100%;
-    padding: 0;
     border-top: 1px solid var(--bs-gray-300);
+    border-bottom: 1px solid var(--bs-gray-300);
+    background-color: white;
+    overflow: hidden;
+    position: sticky;
+    top: -3rem;
+    z-index: 1;
 
     a {
       font-size: 1.5rem;
