Create Crimes and Trials page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,10 @@ $link-hover-dark: #525051;
 $body-color: black;
 
 $line-height-base: 1.75;
+
+$gray-200: #EEEEEE;
+$gray-300: #DFDFDF;
+$gray-400: #C4C4C4;
+$gray-500: #939393;
+$gray-600: #757575;
+$gray-700: #4F4F4F;
