Create Crime content page

--- a/src/styles/components/crime/CrimeCard.scss
+++ b/src/styles/components/crime/CrimeCard.scss
@@ -1,28 +1,33 @@
 .CrimeCard {
-  font-size: 2rem;
-  margin: 1rem 0;
 
-  .wrapper {
-    width: 300px;
-    height: 500px;
+  height: 100%;
+  max-height: 850px;
+  font-size: 2rem;
+
+  .slide {
+    height: calc(100% - 100px);
     background-color: var(--bs-gray-400);
     border-radius: 1.25rem;
     padding: 1.25rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
 
     h3 {
       font-size: 2rem;
       font-weight: normal;
     }
 
-    button {
+    .explore-button {
       font-size: 1rem;
       text-transform: uppercase;
       background-color: var(--bs-gray-500);
-      border: none;
       width: 92px;
       height: 92px;
+      line-height: 92px;
       border-radius: 46px;
+      text-align: center;
+      text-decoration: none;
       transition: all 0.5s;
       position: absolute;
       bottom: 1.50rem;
@@ -34,5 +39,21 @@
         color: var(--bs-gray-400);
       }
     }
+
+    &.open {
+      font-size: 1.125rem;
+      line-height: 1.5;
+       .year {
+         font-weight: bold;
+      }
+    }
+  }
+
+  h3.outside {
+    color: var(--bs-light);
+    position: absolute;
+    text-align: center;
+    font-weight: normal;
+    width: 100%;
   }
 }
