--- a/src/styles/pages/Collection.scss
+++ b/src/styles/pages/Collection.scss
@@ -3,6 +3,8 @@
   background-color: var(--bs-gray-200);
   height: 100%;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 
   .position-sticky {
     z-index: 1;
