--- a/src/styles/pages/Media.scss
+++ b/src/styles/pages/Media.scss
@@ -1,30 +1,37 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
 .Media {
 
   position: absolute;
-  background-color: white;
   top: 0;
   height: 100%;
   width: 100%;
-  padding: 0 1rem 1rem;
+//  padding: 0 1rem 1rem;
   margin: 0;
   z-index: 1;
 
   .content {
+    //background-color: rgba(var(--gray-600-rgb), .12);
     background-color: var(--bs-gray-200);
-    padding: 3rem 2rem 2rem;
+  //  padding: 3rem 2rem 2rem;
     margin: 0;
     height: 100%;
 
     .back-icon {
       position: absolute;
       top: 0.5rem;
-      left: 2rem;
+      left: 1rem;
+      @include media-breakpoint-up(sm) {
+        left: 2rem;
+      }
     }
 
     .metadata {
 
       h1 {
-        font-size: 2.25rem;
+        @include font-size(2.25rem);
       }
 
       a {
@@ -39,7 +46,9 @@
     .picture {
 
       background-color: var(--bs-gray-700);
-      height: 100%;
+      @include media-breakpoint-up(md) {
+        height: 100%;
+      }
       position: relative;
 
       .tools {
@@ -66,6 +75,10 @@
         }
       }
 
+      img {
+        max-width: 100%;
+      }
+
       .react-transform-wrapper {
         height: 100%;
         width: 100%;
@@ -77,6 +90,12 @@
           }
         }
       }
+    }
+  }
+
+  &.dark {
+    .content {
+      background-color: var(--bs-gray-400);
     }
   }
 }
