--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,7 +36,7 @@ select:focus {
 
 h1 {
   font-family: var(--font-family-titles);
-  font-size: 4.5rem;
+  @include font-size(4.5rem);
   font-weight: normal;
 }
 
