--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
-$primary: black;
+$primary: #330F0A;
 $accent: #BC543E;
 $secondary: #878787;
-$dark: black;
+$dark: #330F0A;
 $light: #FFF;
 $link-hover-color: rgba(0, 0, 0, 0.7);
 $link-hover-dark: #525051;
