--- a/src/styles/components/story/StoryChapter.scss
+++ b/src/styles/components/story/StoryChapter.scss
@@ -4,4 +4,17 @@
   &:last-child {
     margin-bottom: 10rem;
   }
+
+  h2{
+    font-family: var(--serif-font-family);
+  }
+  h3{
+    font-family: var(--serif-font-family);
+    font-style: italic;
+  }
+
+  h4{
+    font-family: var(--sans-serif-font-family);
+    font-weight: bold;
+  }
 }
