update button toggle color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,10 +2,10 @@ $primary: #330F0A;
 $accent: #BC543E;
 $secondary: #878787;
 $dark: #330F0A;
-$light: #FFF;
+$light: #F2ECEC;
 $link-hover-color: rgba(0, 0, 0, 0.7);
 $link-hover-dark: #525051;
-$body-color: black;
+$body-color: #330F0A;
 
 $line-height-base: 1.75;
 
