--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
   --sans-serif-font-family: 'brandon-grotesque', sans-serif;
   --accent: #{$accent};
   --bs-body-color: #{$dark};
+  --bs-body-bg: #{$light};
 }
 
 body, html, #root {
