--- a/src/styles/components/collection/CollectionCard.scss
+++ b/src/styles/components/collection/CollectionCard.scss
@@ -8,7 +8,7 @@
 
   .picture {
     width: 100%;
-    height: 300px;
+    height: 280px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,8 +29,8 @@
 
       width: 300px;
       height: 300px;
-      object-fit: cover;
-
+      object-fit: contain;
+      object-position: center bottom;
       &:hover {
         width: 316px;
         height: 316px;
