add custom grays to bootstrap variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,10 +9,10 @@ $body-color: #330F0A;
 
 $line-height-base: 1.75;
 
-$gray-200: #EEEEEE;
-$gray-300: #DFDFDF;
-$gray-400: #C4C4C4;
-$gray-500: #939393;
-$gray-600: #757575;
-$gray-700: #4F4F4F;
-$gray-800: #1E1D1D;
+$gray-200: #E6DBDB;
+$gray-300: #D6C2C2;
+$gray-400: #C5AAAA;
+$gray-500: #9C6D6D;
+$gray-600: #795353;
+$gray-700: #493232;
+$gray-800: #181111;
