Create home page

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -8,19 +8,10 @@
   line-height: 1.2;
   // padding: 1rem 0;
   padding: .25rem 0;
+  height: 72px;
   z-index: 1050;
-  height: 60px;
 
-  // .logo {
-  //   font-size: 1.2rem;
-  //   color: var(--primary);// rgba(var(--bs-dark-rgb), 0.6);
-  //
-  //   img {
-  //     margin-right: 6px;
-  //   }
-  //
-  // }
-  .Header-logo{
+  .header-logo {
     height: 45px;
     margin-left: 5px;
   }
@@ -37,7 +28,6 @@
     border: none;
     box-shadow: none;
     color: var(--bs-dark);
-    // color: rgba(var(--bs-dark-rgb), 0.6);
     font-size: 0.875rem;
     padding-right: 0;
     text-transform: uppercase;
@@ -63,9 +53,6 @@
       border-top: 1px solid var(--bs-gray-300);
       border-bottom: 1px solid var(--bs-gray-300);
       font-family: var(--serif-font-family);
-      &:hover,
-      &.active {
-      }
 
       @include media-breakpoint-up(md) {
         font-size: 2.25rem;
@@ -73,4 +60,21 @@
       }
     }
   }
+
+  &.navbar-dark {
+    .menu-toggler {
+      color: var(--bs-light);
+    }
+
+    .header-logo {
+      path {
+        fill: var(--bs-light);
+      }
+    }
+
+    .main-menu {
+      background-color: var(--bs-dark);
+    }
+  }
+
 }
