--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -68,7 +68,11 @@
     .citation {
       font-size: 1.5rem;
       flex: 1 1 content;
-      margin-bottom: 160px;
+      margin-bottom: 150px;
+
+      @include media-breakpoint-down(md) {
+        margin-bottom: 100px;
+      }
     }
   }
 
@@ -191,6 +195,10 @@
         border-top: 1px solid var(--bs-gray-300);
         border-bottom: 1px solid var(--bs-gray-300);
         width: 100%;
+
+        @include media-breakpoint-down(md) {
+          font-size: 1.25rem;
+        }
       }
 
       .logo {
