--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -72,6 +72,8 @@
 
       @include media-breakpoint-down(md) {
         margin-bottom: 100px;
+        font-size: 1.25rem;
+        line-height: 1.5;
       }
     }
   }
