--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -37,26 +37,30 @@
     }
   }
 
-  .main-menu {
-    height: calc(100vh - 66px);
+  .navbar-menu {
+    margin: 0 -1rem;
+    margin-top: 0.25rem;
     background-color: var(--bs-light);
-    margin-top: 1rem;
 
-    .menu-item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      flex-grow: 1;
-      font-size: 1.5rem;
-      padding: 0.25rem .5rem;
-      border-top: 1px solid var(--bs-gray-300);
-      border-bottom: 1px solid var(--bs-gray-300);
-      font-family: var(--serif-font-family);
+    .main-menu {
+      height: calc(100vh - 72px);
 
-      @include media-breakpoint-up(md) {
-        font-size: 2.25rem;
-        padding: 0.5rem 1rem;
+      .menu-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        flex-grow: 1;
+        font-size: 1.5rem;
+        padding: 0.25rem .5rem;
+        border-top: 1px solid var(--bs-gray-300);
+        border-bottom: 1px solid var(--bs-gray-300);
+        font-family: var(--serif-font-family);
+
+        @include media-breakpoint-up(md) {
+          font-size: 2.25rem;
+          padding: 0.5rem 1rem;
+        }
       }
     }
   }
@@ -76,5 +80,4 @@
       background-color: var(--bs-dark);
     }
   }
-
 }
