--- a/src/styles/pages/Media.scss
+++ b/src/styles/pages/Media.scss
@@ -20,6 +20,8 @@
   .content {
     background-color: var(--bs-gray-200);
     margin: 0;
+    min-height: 100%;
+    
     @include media-breakpoint-up(md) {
       height: 100%;
     }
