--- a/src/styles/pages/Collection.scss
+++ b/src/styles/pages/Collection.scss
@@ -5,6 +5,7 @@
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
+  padding-bottom: 5rem;
 
   .Collection-filters {
     z-index: 1;
