Fix big cards on the last line of the magistrate job page

--- a/src/styles/components/interview/GroupHeaderCard.scss
+++ b/src/styles/components/interview/GroupHeaderCard.scss
@@ -10,7 +10,7 @@
     color: var(--bs-gray-500);
   }
 
-  &::after {
+  &:not(.empty)::after {
     content: '';
     position: absolute;
     left: 0;
